--- a/OdeToFood.Web/Views/Shared/_Layout.cshtml
+++ b/OdeToFood.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Restaurants", "Index" , "Restaurants")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+
                 </ul>
             </div>
         </div>
